# Omnix

./: .gitignore  README.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml
Backend/: .env  .env.example  README.md  hash_test.py  run_bom_migration.py  run_inventory_migration.py  run_inventory_migration_direct.py  verify_db.py
Backend/app/: config.py  database.py  main.py
Backend/app/api/: deps.py
Backend/app/core/: email.py  exceptions.py  security.py
Backend/app/schemas/: alert.py  bom.py  dashboard.py  gate_entry.py  inventory.py  inventory_items.py  material_request.py  material_transfer.py  product.py  production_order.py  token.py  user.py  wip.py
Backend/app/services/: auth_service.py  bom_service.py  bom_service_enhancements.py  dashboard_service.py  gate_entry_service.py  inventory_items_service.py  inventory_service.py  material_request_service.py  product_service.py  (+4 more)
Backend/migrations/: 001_inital_schema.sql  002_bom_schema.sql  002_password_reset_tokens.sql  003_inventory_schema.sql  004_production_orders.sql  005_wip_tracking.sql  006_bom_enhancements.sql  007_wip_alerts.sql  008_inventory_items_enhanced.sql  009_add_assigned_team.sql  010_add_archived_status.sql  011_gate_entries.sql
Frontend/: .eslintrc.cjs  .gitignore  BOLT_IMPORT_PROMPT.md  README.md  SYSTEM_DOCUMENTATION.md  index.html  package-lock.json  package.json  src_README.md  tsconfig.json  vite.config.ts  vitest.config.ts
Frontend/.vercel/: project.json
Frontend/docs/: ai-assistant-prompt.md
Frontend/src/: App.tsx  index.css  main.tsx
(+103 files in other folders)
